src/Manifests/deployment_api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-home-user-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otus-home-user-api
  template:
    metadata:
      labels:
        app: otus-home-user-api
    spec:
      containers:
        - name: otus-home-user-api-container
          image: dimandocker/otus.home.userapi:1.0
          ports:
            - name: web
              containerPort: 80
          livenessProbe:
            httpGet:
              port: 80
              path: /swagger/index.html
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: appsettings-volume
              mountPath: /app/appsettings.json
              subPath: appsettings.json
            - name: secrets-volume
              mountPath: /app/secrets
              readOnly: true
      volumes:
        - name: appsettings-volume
          configMap:
            name: appsettings-config-map
        - name: secrets-volume
          secret:
            secretName: secret-appsettings
