src/Manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: otus-home-user-api-service
spec:
  selector:
    app: otus-home-user-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web 
  type: NodePort
