src/Manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-home-user-api-ingress
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otus-home-user-api-service
                port:
                  number: 8000
  ingressClassName: nginx
